# MCPAudit

./: .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEMO-ASSETS.md  DOC-RECONCILIATION.md  FINDINGS.md  HANDOFF.md  IMPLEMENTATION-ROADMAP.md  Makefile  README.md  SECURITY.md  action.yml  chat-continuity-mcpaudit-1.6.0-ssrf-2026-05-31.md  launch-posts.md  mcp_audit_build_backend.py  pyproject.toml  server.json
.clusterfuzzlite/: Dockerfile  build.sh  requirements.txt
.codex/: verify.commands
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: beta_feedback.md  bug_report.md  feature_request.md  feedback.md  field_report.md
.github/workflows/: agent-permission-diff.yml  cflite_pr.yml  ci.yml  codeql.yml  publish.yml  scorecard.yml  self-audit.yml
.serena/: project.yml
docs/: 1.1-ADOPTION.md  1.5-EVIDENCE-INTAKE.md  1.5-RELEASE-DECISION.md  2.5-RELEASE-NOTES.md  ADOPTION-GUIDE.md  BETA-FEEDBACK-TO-FIXTURES.md  BETA-READINESS-EVIDENCE.md  BETA-READINESS.md  COMPOSITE-SCORING-PROPOSAL.md  EGRESS-DETECTION.md  ESCALATION-DETECTION.md  EVIDENCE-ENFORCEMENT-AGT-FIXTURE.md  EVIDENCE-ENFORCEMENT-THREAT-MODEL.md  EXTERNAL-FIELD-REPORT-REQUEST.md  EXTERNAL-OUTREACH-MESSAGES.md  FEEDBACK-TO-FIXTURES.md  FIELD-REPORTS.md  FIELD-SCAN-POPULAR-SERVERS.md  GOLDEN-ROLLOUT.md  INTEGRITY-DETECTION.md  LAUNCH-CONTROL-CARD.md  LAUNCH-DAY-RUNBOOK.md  LAUNCH-POSTS-2.2.0-DRAFT.md  LAUNCH-RESPONSE-PLAYBOOK.md  MAINTAINER-WORKFLOWS.md  MCP-TRUST-PACKET.md  OUTPUT-CONTRACT.md  PACKAGE-VERIFICATION.md  PIN-MAINTENANCE.md  PORTFOLIO-DISPOSITION.md  PROMPT-RESOURCE-SCORING.md  PROOF-BEFORE-ACTION-THREAT-MODEL.md  PROOF-BEFORE-ACTION.md  PROOFOS-POSTGRES-THREAT-MODEL.md  PROVENANCE-DETECTION.md  RELEASE-CHECKLIST.md  ROADMAP-1.1.md  ROADMAP-1.2.md  ROADMAP-NEXT.md  SAFEFORGE-RUNTIME-THREAT-MODEL.md  (+9 more)
docs/assets/: hero-demo-config.json  hero.tape  policy-gate-demo.sh  policy-gate.tape
examples/: proof-before-action.yaml
examples/ci/: config-health-policy.yml  forge-then-audit.yml  generic-json-policy.yml  github-code-scanning.yml  pin-stale-review.yml
examples/configs/: popular-public-servers.json
examples/consumers/: README.md  dashboard_summary.py  parse-report.mjs  parse_report.py
examples/enforcement-fixture/: synthetic-audit-report.json
examples/maintenance/: stale-pin-review.sh
examples/policies/: README.md  approved-servers-ci.yaml  balanced-team-ci.yaml  browser-automation-ci.yaml  ci-strict.yaml  egress.yaml  escalation-aware-ci.yaml  integrity-aware-ci.yaml  local-review.yaml  package-verify-ci.yaml  provenance-aware-ci.yaml  reviewed-local-workstation.yaml  shadowing-aware-ci.yaml  ssrf-aware-ci.yaml  trifecta-aware-ci.yaml
examples/sandbox/: README.md  index.html  scenarios.json
examples/schemas/: approved-policy-intent-v1.schema.json  audit-report.schema.json  effective-state-v1.schema.json  observed-evidence-v1.schema.json  policy-recommendation-v1.schema.json  safeforge-manifest-v0.schema.json
fuzz/: __init__.py  ssrf_schema_fuzzer.py
scripts/: generate_enforcement_schemas.py  launch_preflight.py  verify_release.py
src/mcp_audit/: __init__.py  analyzer.py  api.py  cli.py  confighealth.py  connector.py  egress.py  enforcement_cli.py  engine.py  escalation.py  evidence_enforcement.py  htmlreport.py  injection.py  integrity.py  llm_analyzer.py  models.py  monitor.py  overrides.py  pinning.py  pkgverify.py  policy.py  proof_capsule.py  proof_cli.py  proof_models.py  proof_trust.py  (+18 more)
tests/: conftest.py  test_analyzer.py  test_api.py  test_artifact_verify.py  test_cli.py  test_config_health_fixtures.py  test_connector.py  test_discovery.py  test_distribution.py  test_egress.py  test_egress_integration.py  test_engine.py  test_escalation.py  test_evidence_enforcement.py  test_examples.py  test_fuzz_targets.py  test_htmlreport.py  test_injection.py  test_integrity.py  test_issue_templates.py  test_llm_analyzer.py  test_monitor.py  test_non_tool_calibration.py  test_output_contract.py  test_overrides.py  test_pinning.py  test_pkgverify.py  test_policy.py  test_proof_before_action.py  test_proofos_postgres.py  test_provenance.py  test_redaction.py  test_release_metadata.py  test_repo_hygiene.py  test_report.py  test_safeforge.py  test_safeforge_consumer.py  test_safeforge_contract_linter.py  test_safeforge_coordinator.py  test_safeforge_runtime.py  (+13 more)
(+72 files in other folders)
