[project]
name = "mcp-audit"
version = "0.1.0"
description = "MCP Permission Auditor — scan, enumerate, and risk-score all locally configured MCP servers"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "saagpatel", email = "saagarpatel08@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "anyio>=4.0",
    "json5>=0.10",
    "mcp>=1.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
watch = ["watchfiles>=0.21"]

[project.urls]
Homepage = "https://github.com/saagpatel/mcp-audit"
Repository = "https://github.com/saagpatel/mcp-audit"
Issues = "https://github.com/saagpatel/mcp-audit/issues"

[project.scripts]
mcp-audit = "mcp_audit.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
anyio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "ruff>=0.15.8",
    "types-pyyaml>=6.0",
]
